--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mehak</title>
 </head>
 <body>
-  background-colour:51, 255, 236;
+  background-color:51, 255, 236;
   <p>Hello, World!</p>
 </body>
 
