--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <title>Mehak</title>
 </head>
-<body>
-  background-color:lightblue;
+<body style="background-color: lightblue;">
   <p>Hello, World!</p>
 </body>
 
